# advent-2021

./: Cargo.toml
src/day01/: bin.rs
src/day02/: bin.rs
src/day03/: bin.rs
src/day04/: bin.rs
src/day05/: bin.rs
src/day06/: bin.rs
src/day07/: bin.rs
src/day08/: bin.rs
src/day09/: bin.rs
src/day10/: bin.rs
src/day11/: bin.rs
src/day12/: bin.rs
src/day13/: bin.rs
src/day14/: bin.rs
src/day15/: bin.rs
src/day16/: bin.rs  err.rs
src/day17/: bin.rs
src/day18/: bin.rs
src/day19/: bin.rs
src/day20/: bin.rs
src/day21/: bin.rs
src/day22/: bin.rs
